syntax = "proto3";
option java_package = "com.fengsheng.protos";

enum role {
  unknown = 0; // 未知角色
  wu_zhi_guo = 1; // 吴志国
  cheng_xiao_die = 2; // 程小蝶
  lian_yuan = 3; // 连鸢
  mao_bu_ba = 4; // 毛不拔
  zhang_yi_ting = 5; // 张一挺
  bai_cang_lang = 6; // 白沧浪
  fei_yuan_long_chuan = 7; // 肥圆龙川
  pei_ling = 8; // 裴玲
  huang_ji_ren = 9; // 黄济仁
  wang_tian_xiang = 10; // 王田香
  li_xing = 11; // 李醒
  wang_kui = 12; // 王魁
  a_fu_luo_la = 13; // 阿芙罗拉
  han_mei = 14; // 韩梅
  zheng_wen_xian = 15; // 鄭文先
  xuan_qing_zi = 16; // 玄青子
  gui_jiao = 17; // 鬼脚
  shao_xiu = 18; // 邵秀
  jin_sheng_huo = 19; // 金生火
  gu_xiao_meng = 20; // 顾小梦
  bai_fei_fei = 21; // 白菲菲
  duan_mu_jing = 22; // 端木静
  wang_fu_gui = 23; // 王富贵
  lao_han = 24; // 老汉
  bai_xiao_nian = 25; // 白小年
  lao_bie = 26; // 老鳖
  xiao_jiu = 27; // 小九
  li_ning_yu = 28; // 李宁玉
  bai_kun_shan = 29; // 白昆山
  shang_yu = 30; // 商玉
  ma_li_ya = 31; // 玛利亚
  qian_min = 32; // 钱敏
  chi_jing_hai = 33; // 池镜海
  qin_yuan_yuan = 34; // 秦圆圆
  sheng_lao_ban = 35; // 盛老板
  gao_qiao_zhi_zi = 36; // 高桥智子
  jian_xian_sheng = 37; // 简先生
  lao_hu = 38; // 老虎
  chen_an_na = 39; // 陈安娜
  ya_pao = 40; // 哑炮
  jin_zi_lai = 41; // 金自来
  qin_wu_ming = 42; // 秦无命
  li_shu_yun = 43; // 李书云
  ling_su_qiu = 44; // 凌素秋
  xiao_ling_dang = 45; // 小铃铛
  chen_da_er = 46; // 陈大耳
  bian_yun_jiang = 47; // 边云疆
  sun_shou_mo = 48; // 孙守謨
  huo_che_si_ji = 49; // 火车司机
  sp_cheng_xiao_die = 1002; // SP程小蝶
  sp_lian_yuan = 1003; // SP连鸢
  sp_a_fu_luo_la = 1013; // SP阿芙罗拉
  sp_han_mei = 1014; // SP韩梅
  sp_gu_xiao_meng = 1020; // SP顾小梦
  sp_bai_fei_fei = 1021; // SP白菲菲
  sp_duan_mu_jing = 1022; // SP端木静
  sp_xiao_jiu = 1027; // SP小九
  sp_li_ning_yu = 1028; // SP李宁玉
  adult_han_mei = 2014; // 成年韩梅
  adult_xiao_jiu = 2027; // 成年小九
}

enum phase {
  Draw_Phase = 0; // 摸牌阶段
  Main_Phase = 1; // 出牌阶段
  Send_Start_Phase = 2; // 情报传递阶段开始时
  Send_Phase = 3; // 传递阶段
  Fight_Phase = 4; // 争夺阶段
  Receive_Phase = 5; // 接收阶段
}

enum card_type {
  Cheng_Qing = 0; // 澄清
  Shi_Tan = 1; // 试探
  Wei_Bi = 2; // 威逼
  Li_You = 3; // 利诱
  Ping_Heng = 4; // 平衡
  Po_Yi = 5; // 破译
  Jie_Huo = 6; // 截获
  Diao_Bao = 7; // 调包
  Wu_Dao = 8; // 误导
  Feng_Yun_Bian_Huan = 9; // 风云变幻
  Mi_Ling = 10; // 密令
  Diao_Hu_Li_Shan = 11; // 调虎离山
  Yu_Qin_Gu_Zong = 12; // 欲擒故纵
}

enum color {
  Black = 0; // 对于身份，则是绿色（神秘人）；对于卡牌，则是黑色
  Red = 1;   // 红色
  Blue = 2;  // 蓝色
  Has_No_Identity = 3; // 失去身份
}

// 神秘人任务
enum secret_task {
  Killer = 0; // 你的回合中，一名红色和蓝色情报合计不少于2张的人死亡
  Stealer = 1; // 你的回合中，有人宣胜，则你代替他胜利
  Collector = 2; // 你获得3张红色情报或者3张蓝色情报
  Mutator = 3; // 当一名角色收集了三张红色情报或三张蓝色情报后，若其没有宣告胜利，则你胜利
  Pioneer = 4; // 你死亡时，已收集了至少一张红色情报或蓝色情报
  Disturber = 5; // 你的回合结束时，除你以外的角色的红色和蓝色情报合计均不少于2张
  Sweeper = 6; // 你的回合中，一名红色和蓝色情报合计小于等于1张的人死亡
}

enum direction {
  Up = 0; // 向上
  Left = 1; // 向左
  Right = 2; // 向右
}

// 卡牌的结构体
message card {
  uint32         card_id = 1; // 卡牌ID
  repeated color card_color = 2; // 卡牌颜色（因为可能有双色卡，所以用了repeated）
  direction      card_dir = 3; // 卡牌上的箭头方向
  card_type      card_type = 4; // 卡牌类型
  repeated color who_draw_card = 5; // （试探卡）哪个身份的人摸1张牌（那么另外的身份一定是弃1张牌）
  bool           can_lock = 6; // 是否有锁定标记
  repeated color secret_color = 7; // （密令卡）长度为3的数组，[东风对应颜色，西风对应颜色，静风对应颜色]
}

enum skill {
  unknown_skill = 0; // 没有名字的技能
  invalid_skill = -1; // 被无效的技能
  lian_luo = 1; // 联络
  ming_er = 2; // 明饵
  xin_si_chao = 3; // 新思潮
  mian_li_cang_zhen = 4; // 绵里藏针
  qi_huo_ke_ju = 5; // 奇货可居
  jin_shen = 6; // 谨慎
  gui_zha = 7; // 诡诈
  yi_ya_huan_ya = 8; // 以牙还牙
  tou_tian = 9; // 偷天
  huan_ri = 10; // 换日
  yi_hua_jie_mu = 11; // 移花接木
  lian_min = 12; // 怜悯
  fu_hei = 13; // 腹黑
  shi_si = 14; // 视死
  ru_gui = 15; // 如归
  ji_zhi = 16; // 集智
  cheng_zhi = 17; // 承志
  wei_sheng = 18; // 尾声
  jiu_ji = 19; // 就计
  cheng_fu = 20; // 城府
  yi_xin = 21; // 遗信
  zhi_yin = 22; // 知音
  jing_meng = 23; // 惊梦
  jie_dao_sha_ren = 24; // 借刀杀人
  jiao_ji = 25; // 交际
  ji_song = 26; // 急送
  zhuan_jiao = 27; // 转交
  miao_bi_qiao_bian = 28; // 妙笔巧辩
  jin_bi = 29; // 禁闭
  jin_kou_yi_kai = 30; // 金口一开
  ji_ban = 31; // 羁绊
  ying_bian = 32; // 应变
  you_dao = 33; // 诱导
  bo_ai = 34; // 博爱
  guang_fa_bao = 35; // 广发报
  qiang_ling = 36; // 强令
  jian_ren = 37; // 坚韧
  miao_shou = 38; // 妙手
  sou_ji = 39; // 搜辑
  jiang_hu_ling = 40; // 江湖令
  dui_zheng_xia_yao = 41; // 对症下药
  du_ji = 42; // 毒计
  cang_shen_jiao_tang = 43; // 藏身教堂
  xian_fa_zhi_ren = 44; // 先发制人
  leng_xue_xun_lian = 45; // 冷血训练
  guan_hai = 46; // 观海
  bi_feng = 47; // 避风
  zuo_you_feng_yuan = 48; // 左右逢源
  bi_yi_shuang_fei = 49; // 比翼双飞
  tan_qiu_zhen_li = 50; // 探求真理
  ru_bi_zhi_shi = 51; // 如臂指使
  shen_cang = 52; // 深藏
  gong_fen = 53; // 共焚
  huo_xin = 54; // 惑心
  cong_rong_ying_dui = 55; // 从容应对
  chi_zi_zhi_xin = 56; // 赤子之心
  yun_chou_wei_wo = 57; // 运筹帷幄
  hou_lai_ren = 58; // 后来人
  zi_zheng_qing_bai = 59; // 自证清白
  shou_kou_ru_ping = 60; // 守口如瓶
  du_ming = 61; // 赌命
  lian_xin = 62; // 联信
  shun_shi_er_wei = 63; // 顺势而为
  mi_xin = 64; // 密信
  jiang_ji_jiu_ji = 65; // 将计就计
  han_hou_lao_shi = 66; // 憨厚老实
  yi_wen_an_hao = 67; // 译文暗号
  yu_si_wang_po = 68; // 鱼死网破
  ding_lun = 69; // 定论
  zhen_li = 70; // 真理
  ying_bian_zi_ru = 71; // 应变自如
  hun_shui_mo_yu = 72; // 浑水摸鱼
  tao_qu = 73; // 套取
  tan_xu_bian_shi = 74; // 探虚辨实
  cun_bu_bu_rang = 75; // 寸步不让
  xin_ge_lian_luo = 76; // 信鸽联络
  hou_zi_qie_xin = 77; // 猴子窃信
  bian_ze_tong = 78; // 变则通
  you_di_shen_ru = 79; // 诱敌深入
  jian_di_feng_xing = 80; // 歼敌风行
  xiang_jin_si_suo = 81; // 详尽思索
  qiang_ying_xia_ling = 82; // 强硬下令
  jie_che_yun_huo = 83; // 借车运货
  workers_are_knowledgable = 84; // 咱们工人有知识
}

enum wait_type {
  play_card = 0; // 出牌阶段空闲时点、争夺阶段空闲时点、濒死求澄清阶段空闲时点
  card_on_effect = 1; // 卡牌结算
  use_skill = 2; // 使用技能
  skill_on_effect = 3; // 技能结算
  send_message = 4; //传递情报
  choose_whether_receive_message = 5; //询问是否接收情报
  save_die = 6; //濒死求澄清
  die_give_card = 7; //死亡给牌
}

enum location {
  deck = 0; // 牌堆
  discard_pile = 1; // 弃牌堆
  handcard = 2; // 手牌
  message_zone = 3; // 情报区
  message_in_transmiting = 4; // 传递中的情报
  card_in_using = 5; // 正在使用的卡牌
  removed_from_game = 6; // 移出游戏
}

message desk_location {
  location location = 1;
  uint32   player_id = 2; //哪个玩家的手牌或情报区，location为2或3时才有意义
}
