syntax = "proto3";
option java_package = "com.fengsheng.protos";

message error_message_toc {
  string msg = 1;
}